<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/home_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.7"
            android:gravity="bottom|center"
            android:text="@string/app_name"
            android:textColor="#CFCFCF"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/coyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:gravity="bottom|center"
            android:text="@string/copyright"
            android:textColor="#CFCFCF" />

        <TextView
            android:id="@+id/all_rights_reserved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|top"
            android:text="@string/all_rights"
            android:textColor="#CFCFCF" />

    </LinearLayout>

</FrameLayout>