<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nav_stupne">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/exit"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:onClick="otazka"
                app:icon="@drawable/abc_vector_test"
                app:iconTint="#FFFFFF"
                tools:ignore="OnClick" />

            <View
                android:id="@+id/space"
                android:layout_width="0sp"
                android:layout_height="0sp"
                android:layout_weight="0.275" />

            <TextView
                android:id="@+id/titleLesson"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/akordy"
                android:textSize="32sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/counter"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="1/8"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="183dp"
            tools:layout_editor_absoluteY="64dp" />

        <TextView
            android:id="@+id/zadanie"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/task_akd"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/img_akd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0.8"
            android:src="@drawable/akd0" />

        <LinearLayout
            android:id="@+id/durove"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dur_kvint"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#302D2D"
                android:onClick="vyhodnot"
                android:text="@string/dur_kvint"
                android:textAllCaps="false"
                android:textColor="@color/textulohy"
                android:textSize="12sp"
                app:backgroundTint="@color/white"
                app:backgroundTintMode="multiply"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/dur_sext"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#302D2D"
                android:onClick="vyhodnot"
                android:text="@string/dur_sext"
                android:textAllCaps="false"
                android:textColor="@color/textulohy"
                android:textSize="12sp"
                app:backgroundTint="@color/white"
                app:backgroundTintMode="multiply"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/dur_kvart"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#302D2D"
                android:onClick="vyhodnot"
                android:text="@string/dur_kvart"
                android:textAllCaps="false"
                android:textColor="@color/textulohy"
                android:textSize="12sp"
                app:backgroundTint="@color/white"
                app:backgroundTintMode="multiply"
                tools:ignore="OnClick" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/molove"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mol_kvint"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#302D2D"
                android:onClick="vyhodnot"
                android:text="@string/mol_kvint"
                android:textAllCaps="false"
                android:textColor="@color/textulohy"
                android:textSize="12sp"
                app:backgroundTint="@color/white"
                app:backgroundTintMode="multiply"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/mol_sext"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#302D2D"
                android:onClick="vyhodnot"
                android:text="@string/mol_sext"
                android:textAllCaps="false"
                android:textColor="@color/textulohy"
                android:textSize="12sp"
                app:backgroundTint="@color/white"
                app:backgroundTintMode="multiply"
                tools:ignore="OnClick" />

            <Button
                android:id="@+id/mol_kvart"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#302D2D"
                android:onClick="vyhodnot"
                android:text="@string/mol_kvart"
                android:textAllCaps="false"
                android:textColor="@color/textulohy"
                android:textSize="12sp"
                app:backgroundTint="@color/white"
                app:backgroundTintMode="multiply"
                tools:ignore="OnClick" />
        </LinearLayout>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>